tests/files/lexer_tests/should_fail/056.cmdr
// Illegal character in variable name (ascii 23)
myvar = 23;